# coredump_watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: directory_watcher.hpp  filename_validation.hpp  tar_writer.hpp  temporary_file.hpp  util.hpp
src/: directory_watcher.cpp  filename_validation.cpp  main.cpp  tar_writer.cpp  temporary_file.cpp  util.cpp
tests/integration/: coredump_watcher.resource  test.robot
tests/unit/: CMakeLists.txt
tests/unit/src/: test.name_validation.cpp  test.temporary_file.cpp  test.util.cpp
